configure email backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,3 +9,8 @@ POSTGRES_HOST=
 POSTGRES_PORT=
 STORAGE_BUCKET=
 SIGNING_KEY=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DOMAIN=
