--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
 max_line_length = 119
-exclude = .git,*env*,*venv*,__pycache__,*/migrations/*,*/staticfiles/*,*/mediafiles/*
+exclude = .git,*env*,*venv*,__pycache__,*/migrations/*,*/staticfiles/*,*/mediafiles/*,*/scripts/*
