--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - ./server:/app
       - static_volume:/app/staticfiles
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     env_file:
       - ./server/.env
     depends_on:
@@ -26,6 +26,20 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    networks:
+      - kanban-net
+  
+  nginx:
+    restart: always
+    build:
+      context: ./docker/local/nginx 
+      dockerfile: Dockerfile 
+    volumes:
+      - static_volume:/app/staticfiles 
+    ports:
+      - "8081:80"
+    depends_on:
+      - api
     networks:
       - kanban-net
 
