--- a/server/setup.cfg
+++ b/server/setup.cfg
@@ -1,3 +1,10 @@
 [flake8]
 max_line_length = 119
 exclude = .git,*env*,*venv*,__pycache__,*/migrations/*,*/staticfiles/*,*/mediafiles/*,*/scripts/*
+
+[coverage:run]
+source = .
+omit = *apps.py,*settings.py,*urls.py,*wsgi.py,*asgi.py,manage.py,conftest.py,*base.py,*development.py,*production.py,*__init__.py,*/migrations/*,*tests/*,*/env/*,*/venv/*,*/scripts/*
+
+[coverage:report]
+show_missing = True
