--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,7 @@
       "@features/*": ["src/features/*"],
       "@components/*": ["src/common/components/*"],
       "@hooks/*": ["src/common/hooks/*"],
+      "@utils/*": ["src/common/utils/*"],
     },
     "target": "ESNext",
     "useDefineForClassFields": true,
